tests/toylang/neg/001104_mutation.toylang
program a = { if a then then sleep; } .
